@@ -1700,6 +1700,14 @@ class CallasDonnerhackeFinneyShawThayerRFC4880
 			 const std::string								&policy,
 			 const tmcg_openpgp_octets_t					&issuer, 
 			 tmcg_openpgp_octets_t							&out);
+		static void PacketSigPrepareDetachedSignatureV5
+			(const tmcg_openpgp_signature_t					type,
+			 const tmcg_openpgp_hashalgo_t					hashalgo, 
+			 const time_t									sigtime,
+			 const time_t									sigexptime,
+			 const std::string								&policy,
+			 const tmcg_openpgp_octets_t					&issuerfpr, 
+			 tmcg_openpgp_octets_t							&out);
 		static void PacketSigPrepareDetachedSignature
 			(const tmcg_openpgp_signature_t					type,
 			 const tmcg_openpgp_pkalgo_t					pkalgo,
@@ -1708,6 +1716,15 @@ class CallasDonnerhackeFinneyShawThayerRFC4880
 			 const time_t									sigexptime,
 			 const std::string								&policy,
 			 const tmcg_openpgp_octets_t					&issuer, 
+			 tmcg_openpgp_octets_t							&out);
+		static void PacketSigPrepareDetachedSignatureV5
+			(const tmcg_openpgp_signature_t					type,
+			 const tmcg_openpgp_pkalgo_t					pkalgo,
+			 const tmcg_openpgp_hashalgo_t					hashalgo, 
+			 const time_t									sigtime,
+			 const time_t									sigexptime,
+			 const std::string								&policy,
+			 const tmcg_openpgp_octets_t					&issuerfpr, 
 			 tmcg_openpgp_octets_t							&out);
 		static void PacketSigPrepareRevocationSignature
 			(const tmcg_openpgp_signature_t					type,
